changing db to sqlite

--- a/src/MeterReader/MeterReaderWeb/package.json
+++ b/src/MeterReader/MeterReaderWeb/package.json
@@ -30,6 +30,10 @@
     "gulp": "4.0.2",
     "gulp-uglify": "3.0.2",
     "gulp-concat": "2.6.1"
+  },
+  "-vs-binding": {
+    "ProjectOpened": [
+      "watch"
+    ]
   }
-, "-vs-binding":{"ProjectOpened":["watch"]}
 }
