--- a/src/MeterReader/MeterReaderWeb/appsettings.json
+++ b/src/MeterReader/MeterReaderWeb/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=MeterReadingDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "MeterReadingDb": "Data Source=MeterReading.db"
   },
   "Tokens": {
     "Issuer": "localhost",
